add table in page1

--- a/vue-login/index.html
+++ b/vue-login/index.html
@@ -3,6 +3,7 @@
 <head>
    <meta charset="utf-8">
    <title>Vue2.0</title>
+   <link rel="shortcut icon" href="./static/img/logo01.jpg" type="image/x-icon"/>
    <style>
       html, body {
          margin: 0;
