--- a/vue-login/index.html
+++ b/vue-login/index.html
@@ -8,6 +8,8 @@
       html, body {
          margin: 0;
          padding: 0;
+         height: 100%;
+         /*padding-top: 60px;*/
       }
    </style>
 </head>
